# ink

./: .gitignore  Cargo.toml
.config/: cargo_spellcheck.dic
crates/allocator/: Cargo.toml
crates/e2e/: Cargo.toml
crates/e2e/macro/: Cargo.toml
crates/e2e/src/: builders.rs  client.rs  lib.rs  xts.rs
crates/engine/: Cargo.toml
crates/engine/src/: chain_extension.rs  database.rs  ext.rs  lib.rs  tests.rs  types.rs
crates/env/: Cargo.toml
crates/env/src/: api.rs  backend.rs  chain_extension.rs  error.rs  lib.rs  topics.rs  types.rs
crates/env/src/call/: call_builder.rs  create_builder.rs  execution_input.rs  selector.rs
crates/env/src/engine/: mod.rs
crates/env/src/engine/off_chain/: call_data.rs  impls.rs  mod.rs  test_api.rs  tests.rs
crates/env/src/engine/on_chain/: buffer.rs  ext.rs  impls.rs
crates/env/src/engine/on_chain/ext/: riscv32.rs
crates/ink/: Cargo.toml
crates/ink/codegen/: Cargo.toml
crates/ink/codegen/src/: enforced_error.rs  lib.rs  traits.rs
crates/ink/codegen/src/generator/: arg_list.rs  blake2b.rs  chain_extension.rs  contract.rs  dispatch.rs  env.rs  events.rs  ink_test.rs  item_impls.rs  metadata.rs  mod.rs  selector.rs  storage.rs  storage_item.rs
crates/ink/codegen/src/generator/as_dependency/: call_builder.rs  contract_ref.rs  mod.rs
crates/ink/codegen/src/generator/trait_def/: call_builder.rs  call_forwarder.rs  definition.rs  mod.rs  trait_registry.rs
crates/ink/ir/: Cargo.toml
crates/ink/macro/: Cargo.toml
crates/ink/macro/src/: lib.rs
crates/ink/macro/src/storage/: storable.rs
crates/ink/macro/src/storage/tests/: storable.rs
crates/ink/src/: env_access.rs  lib.rs
crates/ink/src/codegen/dispatch/: type_check.rs
crates/ink/src/reflect/: dispatch.rs
crates/ink/tests/ui/chain_extension/: E-01-simple.rs
crates/ink/tests/ui/contract/fail/: constructor-input-non-codec.stderr  constructor-return-result-invalid.rs  constructor-return-result-non-codec-error.stderr  constructor-self-receiver-03.stderr  message-input-non-codec.stderr  message-returns-non-codec.stderr
crates/ink/tests/ui/contract/pass/: constructor-aliases.rs  constructor-return-result-alias.rs  constructor-return-result-cross-contract.rs  constructor-return-result-err.rs  constructor-return-result-explicit.rs  constructor-return-result-ok.rs  dispatch-decoder-works.rs  example-erc20-works.rs  example-erc721-works.rs  example-return-err-works.rs  storage-packed-fields.rs
crates/ink/tests/ui/storage_item/fail/: collections_only_packed_1.stderr  collections_only_packed_2.stderr  packed_is_not_derived_automatically.stderr
crates/ink/tests/ui/storage_item/pass/: argument_derive_false.rs  complex_non_packed_enum.rs  complex_non_packed_struct.rs  complex_packed_enum.rs  complex_packed_struct.rs  packed_tuple_struct.rs
crates/ink/tests/ui/trait_def/fail/: message_input_non_codec.stderr  message_output_non_codec.stderr
crates/metadata/: Cargo.toml
crates/prelude/: Cargo.toml
crates/primitives/: Cargo.toml
crates/primitives/src/: lib.rs  types.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/storage/src/lazy/: mapping.rs  mod.rs
crates/storage/traits/: Cargo.toml
crates/storage/traits/src/: lib.rs  storage.rs
crates/storage/traits/src/impls/: mod.rs
