[package]
name = "ink_allocator"

edition.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
description = "[ink!] Bindings to the Wasm heap memory allocator."
documentation = "https://docs.rs/ink_allocator/"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
readme = "README.md"

[dependencies]
cfg-if = "1.0"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

[features]
default = ["std"]
std = []
ink-fuzz-tests = ["std"]
no-allocator = []
