[package]
name = "ink_e2e"

edition.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

authors = ["Parity Technologies <admin@parity.io>"]
description = "[ink!] End-to-end testing framework for smart contracts."
documentation = "https://docs.rs/ink_e2e/"
include = ["/Cargo.toml", "src/**/*.rs", "/README.md", "/LICENSE"]
readme = "README.md"

[dependencies]
ink_e2e_macro = { workspace = true }
ink = { workspace = true }
ink_env = { workspace = true }
ink_primitives = { workspace = true }

funty = { workspace = true }
impl-serde = { workspace = true, default-features = false }
jsonrpsee = { workspace = true, features = ["ws-client"] }
parity-scale-codec = { workspace = true, default-features = false, features = ["derive"] }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { workspace = true }
subxt = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Substrate
pallet-contracts-primitives = { workspace = true }
sp-core = { workspace = true, default-features = false }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true }
sp-weights = { workspace = true }

[dev-dependencies]
# Required for the doctest of `MessageBuilder::call`
scale-info = { workspace = true, default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = []
