[package]
name = "ink_e2e"

edition.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

authors = ["Parity Technologies <admin@parity.io>"]
description = "[ink!] End-to-end testing framework for smart contracts."
documentation = "https://docs.rs/ink_e2e/"
include = ["/Cargo.toml", "src/**/*.rs", "/README.md", "/LICENSE"]
readme = "README.md"

[dependencies]
funty = { workspace = true }
impl-serde = { workspace = true }
jsonrpsee = { workspace = true, features = ["ws-client"] }
# cannot inherit due to: https://github.com/bkchr/proc-macro-crate/issues/34
scale = { package = "parity-scale-codec", version = "3.4", default-features = false, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
subxt = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

ink_e2e_macro = { workspace = true, default-features = true }
ink = { workspace = true, default-features = true }
ink_env = { workspace = true, default-features = true }
ink_primitives = { workspace = true, default-features = true }

# Substrate
pallet-contracts-primitives = { workspace = true }
sp-core = { workspace = true }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true }
sp-weights = { workspace = true }

[dev-dependencies]
# Required for the doctest of `MessageBuilder::call`
scale-info = { workspace = true, features = ["derive"] }

[features]
default = ["std"]
std = []
