[package]
name = "ink_engine"

edition.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

authors = ["Parity Technologies <admin@parity.io>", "Michael Müller <michi@parity.io>"]
description = "[ink!] Off-chain environment for testing."
documentation = "https://docs.rs/ink_engine/"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
readme = "README.md"

[dependencies]
ink_primitives = { version = "4.2.0", path = "../../crates/primitives", default-features = false }
scale = { package = "parity-scale-codec", version = "3.4", default-features = false, features = ["derive"] }
derive_more = { version = "0.99", default-features = false, features = ["from", "display"] }

sha2 = { version = "0.10" }
sha3 = { version = "0.10" }
blake2 = { version = "0.10" }

# ECDSA for the off-chain environment.
secp256k1 = { version = "0.27.0", features = ["recovery", "global-context"], optional = true }

[features]
default = ["std"]
std = [
    "scale/std",
    "secp256k1"
]
