[package]
name = "ink_engine"

edition.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

authors = ["Parity Technologies <admin@parity.io>", "Michael Müller <michi@parity.io>"]
description = "[ink!] Off-chain environment for testing."
documentation = "https://docs.rs/ink_engine/"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
readme = "README.md"

[dependencies]
derive_more = { workspace = true, features = ["from", "display"] }
parity-scale-codec = { workspace = true, features = ["derive"] }
sha2 = { workspace = true }
sha3 = { workspace = true }
blake2 = { workspace = true }

ink_primitives = { workspace = true }

# ECDSA for the off-chain environment.
secp256k1 = { workspace = true, features = ["recovery", "global-context"], optional = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "secp256k1"
]
