[package]
name = "ink_env"

edition.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
description = "[ink!] Low-level interface for interacting with the smart contract Wasm executor."
documentation = "https://docs.rs/ink_env/"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
readme = "README.md"
rust-version = "1.68"

[dependencies]
arrayref = { workspace = true }
cfg-if = { workspace = true }
derive_more = { workspace = true, default-features = false, features = ["from", "display"] }
num-traits = { workspace = true, default-features = false, features = ["i128"] }
parity-scale-codec = { workspace = true, default-features = false, features = ["derive"] }
paste = { workspace = true }
static_assertions = { workspace = true }

ink_allocator = { workspace = true, default-features = false }
ink_storage_traits = { workspace = true, default-features = false }
ink_prelude = { workspace = true, default-features = false }
ink_primitives = { workspace = true, default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rlibc = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ink_engine = { workspace = true, optional = true }

# Hashes for the off-chain environment.
sha2 = { workspace = true, optional = true }
sha3 = { workspace = true, optional = true }
blake2 = { workspace = true, optional = true }

# ECDSA for the off-chain environment.
secp256k1 = { workspace = true, features = ["recovery", "global-context"], optional = true }

# Only used in the off-chain environment.
#
# Sadly couldn't be marked as dev-dependency.
# Never use this crate outside the off-chain environment!
scale-decode = { workspace = true, default-features = false, optional = true }
scale-encode = { workspace = true, default-features = false, optional = true }
scale-info = { workspace = true, default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink = { workspace = true }

[features]
default = ["std"]
std = [
    "ink_allocator/std",
    "ink_prelude/std",
    "ink_primitives/std",
    "ink_storage_traits/std",
    "ink_engine/std",
    "parity-scale-codec/std",
    "scale-decode",
    "scale-encode",
    "scale-info/std",
    "secp256k1",
    "num-traits/std",
    # Enables hashing crates for off-chain environment.
    "sha2",
    "sha3",
    "blake2",
]

# Enable contract debug messages via `debug_print!` and `debug_println!`.
ink-debug = []

# Disable the ink! provided global memory allocator.
no-allocator = ["ink_allocator/no-allocator"]
