[package]
name = "ink"

edition.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
description = "[ink!] Rust based eDSL for writing smart contracts for Substrate"
documentation = "https://docs.rs/ink"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
readme = "README.md"
rust-version = "1.63"

[dependencies]
derive_more = { workspace = true, default-features = false, features = ["from"] }
parity-scale-codec = { workspace = true, default-features = false, features = ["derive"] }

ink_env = { workspace = true, default-features = false }
ink_storage = { workspace = true, default-features = false }
ink_primitives = { workspace = true, default-features = false }
ink_metadata = { workspace = true, default-features = false, optional = true }
ink_prelude = { workspace = true, default-features = false }
ink_macro = { workspace = true, default-features = false }

[dev-dependencies]
ink_ir = { workspace = true }
ink_metadata = { workspace = true, default-features = false }

trybuild = { workspace = true, features = ["diff"] }
# Required for the doctest of `env_access::EnvAccess::instantiate_contract`
scale-info = { workspace = true, default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_prelude/std",
    "ink_primitives/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_macro/std",
    "parity-scale-codec/std",
]
# Enable contract debug messages via `debug_print!` and `debug_println!`.
ink-debug = [
    "ink_env/ink-debug",
]

show-codegen-docs = []

# Disable the ink! provided global memory allocator.
no-allocator = ["ink_env/no-allocator"]
