[package]
name = "ink_metadata"

edition.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
description = "[ink!] Metadata definitions for ink! smart contracts."
documentation = "https://docs.rs/ink_metadata/"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
readme = "README.md"

[dependencies]
ink_prelude = { version = "4.2.0", path = "../prelude/", default-features = false }
ink_primitives = { version = "4.2.0", path = "../primitives/", default-features = false }

serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
impl-serde = "0.4.0"
derive_more = { version = "0.99", default-features = false, features = ["from"] }
scale-info = { version = "2.6", default-features = false, features = ["derive", "serde", "decode", "schema"] }
schemars = "0.8"

[dev-dependencies]
pretty_assertions = "1"
serde_json = "1"

[features]
default = [
    "std",
    "derive",
]
std = [
    "ink_prelude/std",
    "ink_primitives/std",
    "serde/std",
    "scale-info/std",
]
derive = []
