[package]
name = "ink_metadata"

edition.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
description = "[ink!] Metadata definitions for ink! smart contracts."
documentation = "https://docs.rs/ink_metadata/"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
readme = "README.md"

[dependencies]
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
impl-serde = { workspace = true }
derive_more = { workspace = true, default-features = false, features = ["from"] }
scale-info = { workspace = true, default-features = false, features = ["derive", "serde", "decode", "schema"] }
schemars = { workspace = true }

ink_prelude = { workspace = true, default-features = false }
ink_primitives = { workspace = true, default-features = false }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }

[features]
default = [
    "std",
    "derive",
]
std = [
    "ink_prelude/std",
    "ink_primitives/std",
    "serde/std",
    "scale-info/std",
]
derive = []
