[package]
name = "ink_prelude"

edition.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
description = "[ink!] Common API for no_std and std to access alloc crate types."
documentation = "https://docs.rs/ink_prelude/"
include = ["/Cargo.toml", "src/**/*.rs", "/README.md", "/LICENSE"]
readme = "README.md"

[dependencies]
cfg-if = "1.0"

[features]
default = ["std"]
std = []
