[package]
name = "ink_primitives"

edition.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
description = "[ink!] Fundamental primitive types for ink! smart contracts."
documentation = "https://docs.rs/ink_primitives/"
include = ["/Cargo.toml", "src/**/*.rs", "/README.md", "/LICENSE"]
readme = "README.md"

[dependencies]
derive_more = { workspace = true, default-features = false, features = ["from", "display"] }
parity-scale-codec = { workspace = true, default-features = false, features = ["derive"] }
scale-decode = { workspace = true, default-features = false, features = ["derive"], optional = true }
scale-encode = { workspace = true, default-features = false, features = ["derive"], optional = true }
scale-info = { workspace = true, default-features = false, features = ["derive"], optional = true }
xxhash-rust = { workspace = true, features = ["const_xxh32"] }

ink_prelude = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "ink_prelude/std",
    "parity-scale-codec/std",
    "scale-decode",
    "scale-encode",
    "scale-info/std",
]
