[package]
name = "ink_primitives"

edition.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
description = "[ink!] Fundamental primitive types for ink! smart contracts."
documentation = "https://docs.rs/ink_primitives/"
include = ["/Cargo.toml", "src/**/*.rs", "/README.md", "/LICENSE"]
readme = "README.md"

[dependencies]
derive_more = { workspace = true, features = ["from", "display"] }
scale = { workspace = true, features = ["derive"] }
scale-decode = { workspace = true, features = ["derive"], optional = true }
scale-encode = { workspace = true, features = ["derive"], optional = true }
scale-info = { workspace = true, features = ["derive"], optional = true }
xxhash-rust = { workspace = true, features = ["const_xxh32"] }

ink_prelude = { workspace = true }

[features]
default = ["std"]
std = [
    "ink_prelude/std",
    "scale/std",
    "scale-decode",
    "scale-encode",
    "scale-info/std",
]
