[package]
name = "ink_storage"

edition.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
description = "[ink!] Data structures to organize and manipulate ink! contract storage."
documentation = "https://docs.rs/ink_storage/"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
readme = "README.md"

[dependencies]
array-init = { workspace = true }
cfg-if = { workspace = true }
derive_more = { workspace = true, features = ["from", "display"] }
# cannot inherit due to: https://github.com/bkchr/proc-macro-crate/issues/34
scale = { package = "parity-scale-codec", version = "3.4", default-features = false, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"], optional = true }

ink_env = { workspace = true }
ink_metadata = { workspace = true, features = ["derive"], optional = true }
ink_prelude = { workspace = true }
ink_primitives = { workspace = true }
ink_storage_traits = { workspace = true }

[dev-dependencies]
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
itertools = { workspace = true, default-features = true }

ink = { workspace = true }

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_prelude/std",
    "ink_primitives/std",
    "ink_storage_traits/std",
    "scale/std",
    "scale-info/std",
]
ink-fuzz-tests = ["std"]
