[package]
name = "ink_e2e_macro"

edition.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

authors = ["Parity Technologies <admin@parity.io>"]
description = "[ink!] Macro for generating end-to-end tests"
documentation = "https://docs.rs/ink_e2e_macro/"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
readme = "../README.md"

[lib]
name = "ink_e2e_macro"
proc-macro = true

[dependencies]
ink_ir = { version = "4.2.0", path = "../../ink/ir" }
cargo_metadata = "0.15.3"
contract-build = "3.0.0"
derive_more = "0.99.17"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde_json = "1.0.89"
syn = "2"
proc-macro2 = "1"
quote = "1"
which = "4.4.0"
