[package]
name = "ink_e2e_macro"

edition.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

authors = ["Parity Technologies <admin@parity.io>"]
description = "[ink!] Macro for generating end-to-end tests"
documentation = "https://docs.rs/ink_e2e_macro/"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
readme = "../README.md"

[lib]
name = "ink_e2e_macro"
proc-macro = true

[dependencies]
cargo_metadata = { workspace = true }
contract-build = { workspace = true }
derive_more = { workspace = true, default-features = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde_json = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
which = { workspace = true }

ink_ir = { workspace = true, default-features = true }
