[package]
name = "ink_codegen"

edition.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
documentation = "https://docs.rs/ink_codegen/"
description = "data structures and algorithms for generating ink! IR code"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
readme = "README.md"

[lib]
name = "ink_codegen"

[dependencies]
blake2 = { workspace = true }
derive_more = { workspace = true, default-features = false, features = ["from"] }
either = { workspace = true, default-features = false }
heck = { workspace = true }
impl-serde = { workspace = true }
itertools = { workspace = true }
parity-scale-codec = { workspace = true, default-features = false, features = ["derive"] }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
serde_json = { workspace = true }
syn = { workspace = true, features = ["parsing", "full", "extra-traits"] }

ink_ir = { workspace = true, default-features = false }
ink_primitives = { workspace = true }

[features]
default = ["std"]
std = [
    "itertools/use_std",
    "either/use_std",
    "ink_ir/std"
]
