[package]
name = "ink_ir"

edition.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
description = "data structures and algorithms for ink! intermediate representation"
documentation = "https://docs.rs/ink_ir/"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
readme = "README.md"

[lib]
name = "ink_ir"

[dependencies]
quote = "1"
syn = { version = "2.0", features = ["parsing", "full", "visit", "extra-traits"] }
proc-macro2 = "1.0"
itertools = { version = "0.11", default-features = false }
either = { version = "1.5", default-features = false }
blake2 = "0.10"
ink_prelude = { version = "4.1.0", path = "../../prelude/", default-features = false }

[features]
default = ["std"]
std = [
    "itertools/use_std",
    "either/use_std",
]
