[package]
name = "ink_ir"

edition.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
description = "data structures and algorithms for ink! intermediate representation"
documentation = "https://docs.rs/ink_ir/"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
readme = "README.md"

[lib]
name = "ink_ir"

[dependencies]
blake2 = { workspace = true }
either = { workspace = true }
itertools = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["parsing", "full", "visit", "extra-traits"] }

ink_prelude = { workspace = true }

[features]
default = ["std"]
std = [
    "itertools/use_std",
    "either/use_std",
]
