[package]
name = "ink_macro"

edition.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

authors = ["Parity Technologies <admin@parity.io>", "Robin Freyler <robin@parity.io>"]
description = "[ink!] Rust based eDSL for writing smart contracts for Substrate"
documentation = "https://docs.rs/ink_macro/"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
readme = "README.md"

[dependencies]
parity-scale-codec = { workspace = true, features = ["derive"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
syn = { workspace = true }
synstructure = { workspace = true }

ink_ir = { workspace = true }
ink_codegen = { workspace = true }
ink_primitives = { workspace = true }

[dev-dependencies]
ink_env = { workspace = true, default-features = true }
ink = { workspace = true, default-features = true }
ink_metadata = { workspace = true, default-features = true }
ink_prelude = { workspace = true, default-features = true }
ink_storage = { workspace = true, default-features = true }
scale-info = { workspace = true, features = ["derive"] }

[lib]
name = "ink_macro"
proc-macro = true

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "ink_ir/std",
    "ink_primitives/std",
]
