[package]
name = "ink_storage_traits"

edition.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

authors = ["Parity Technologies <admin@parity.io>"]
description = "[ink!] defines traits for using ink storage."
documentation = "https://docs.rs/ink_storage_traits"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
readme = "../README.md"

[dependencies]
ink_metadata = { version = "4.2.0", path = "../../metadata", default-features = false, features = ["derive"], optional = true }
ink_primitives = { version = "4.2.0", path = "../../primitives", default-features = false }
ink_prelude = { version = "4.2.0", path = "../../prelude", default-features = false }
scale = { package = "parity-scale-codec", version = "3.4", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
paste = "1.0"

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
]
