[package]
name = "ink_storage_traits"

edition.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

authors = ["Parity Technologies <admin@parity.io>"]
description = "[ink!] defines traits for using ink storage."
documentation = "https://docs.rs/ink_storage_traits"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]
readme = "../README.md"

[dependencies]
parity-scale-codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"], optional = true }

ink_metadata = { workspace = true, default-features = false, features = ["derive"], optional = true }
ink_prelude = { workspace = true, default-features = false }
ink_primitives = { workspace = true, default-features = false }

[dev-dependencies]
paste = { workspace = true }

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "parity-scale-codec/std",
    "scale-info/std",
]
